--- a/manageInventory.ui
+++ b/manageInventory.ui
@@ -18,55 +18,54 @@
     <property name="geometry">
      <rect>
       <x>109</x>
-      <y>99</y>
+      <y>109</y>
       <width>571</width>
-      <height>291</height>
+      <height>281</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="0">
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="text">
-        <string>Change On-Hands</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QPushButton" name="pushButton_5">
+     <item row="4" column="1">
+      <widget class="QPushButton" name="pushButton_revitem">
        <property name="text">
         <string>Remove Item from Inventory</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="pushButton_6">
-       <property name="text">
-        <string>Change Effective Quantity</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QPushButton" name="pushButton_4">
+     <item row="4" column="0">
+      <widget class="QPushButton" name="pushButton_addItem">
        <property name="text">
         <string>Add New Item to Inventory</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="pushButton_editInv">
+       <property name="text">
+        <string>Edit Current Inventory</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QPushButton" name="pushButton_viewInv">
        <property name="text">
         <string>View Inventory</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QPushButton" name="pushButton_home">
-       <property name="text">
-        <string>Home</string>
-       </property>
-      </widget>
-     </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="pushButton_home">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>101</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Home</string>
+    </property>
    </widget>
   </widget>
  </widget>
