--- a/src/reportsView.ui
+++ b/src/reportsView.ui
@@ -113,6 +113,9 @@
            <height>451</height>
           </rect>
          </property>
+         <property name="acceptDrops">
+          <bool>false</bool>
+         </property>
          <attribute name="label">
           <string>Filter List</string>
          </attribute>
@@ -261,7 +264,7 @@
            </rect>
           </property>
          </widget>
-         <widget class="QWidget" name="">
+         <widget class="QWidget" name="layoutWidget">
           <property name="geometry">
            <rect>
             <x>30</x>
